# autobot

./: .gitignore  README.md  pyproject.toml
.github/workflows/: action.yml
src/: base.py  functions.py  roles.py  setup.py
test/: test_setup.py
