[tool.poetry]
name = "autobot"
version = "0.1.0"
description = "this is a side project to play aroud LLMs"
authors = ["czwz <tim010007@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^2.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
